Fixed padding for gallery on mobile

--- a/css/la_lightbox.css
+++ b/css/la_lightbox.css
@@ -365,6 +365,7 @@
 			#gallery-container
 			{
 				width: 100%;
+				padding: 0px;
 			}
 			#gallery-container .featured-gallery-img
 			{
